// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component renders image when imageSrc prop is provided 1`] = `
<div>
  <a
    href="/"
  >
    <div
      class="logo css-759u60"
    >
      <img
        alt="The logo website"
        class="logo-image css-1x2q8y0"
        loading="eager"
        src="logo.png"
        srcset="logo.png"
      />
    </div>
  </a>
</div>
`;

exports[`Logo component renders text when text prop is provided 1`] = `
<div>
  <a
    href="/"
  >
    <div
      class="logo css-759u60"
    >
      <h1
        class="chakra-heading css-1xu3tth"
      >
        My Logo
      </h1>
    </div>
  </a>
</div>
`;

exports[`Logo component renders without crashing 1`] = `
<div>
  <a
    href="/"
  >
    <div
      class="logo css-759u60"
    />
  </a>
</div>
`;
